welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	var vuBiscuit()=false
            ^Program:3: error: not found: value estsurBiscuit
		if (estsurBiscuit()) {
                    ^Program:4: error: not found: value vuBiscuit
			vuBiscuit=true
                        ^Program:9: error: not found: value vuBiscuit
		if (vuBiscuit==true) {
                    ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (vuBiscuit==true) {
                ^