welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit()=false
		if (estsurBiscuit()) {
			vuBiscuit=true
		} else {
			for (i <- 1 to 6) {
			avance()
		}}
		if (vuBiscuit==true) {
			return true
		}
	}


